Set the name on the resource from the database

Because many resources use the filename directly for the name,
and the filename now is versioned, and we don't want the versioned
filename used as the name.

This fixes importing a resource and using it in a pattern fill
layer.

BUG:429883